# KnowledgeDepot

./: README.md
code_snippets/test_server_grpc/: .gitignore  README.md  pyproject.toml
code_snippets/test_server_grpc/src/: greet.proto  greet_pb2_grpc.py  server.py
code_snippets/test_server_grpc/src/client/: rpc_client.py
code_snippets/test_server_grpc/src/services/: greeter_service.py
knowledge_base/api_basics/: grpc.md
